@@ -17,7 +17,7 @@ allprojects {
     apply plugin: "eclipse"
     apply plugin: "idea"
 
-    version = 'Alpha 6.1.7'
+    version = 'Alpha 6.1.8'
     ext {
         appName = 'undermount'
         gdxVersion = '1.9.10'
